--- a/style.css
+++ b/style.css
@@ -92,3 +92,21 @@ p {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.contact-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: white;
+    width: 400px;
+    border-color: black;
+    padding: 10px;
+}
+.contact-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 200px;
+}
